fix compendium form spacing

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -44,7 +44,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.5rem;
+  gap: 2rem;
   font-weight: 700;
 }
 
